Add basic styling

--- a/client/src/styles/style.scss
+++ b/client/src/styles/style.scss
@@ -1,1 +1,15 @@
-
+.nav {
+  background-color: #36026e;
+  color: white;
+}
+.product {
+  background-color: #cfd1d0;
+  margin: 15px 3px 0 1px;
+}
+.container-fluid {
+  padding: 0;
+}
+.row {
+  margin: 0;
+  justify-content: center;
+}
